# autoware.universe

./: .clang-tidy-ci  .cspell.json  build_depends_humble.repos  build_depends_nightly.repos  build_depends_stable.repos
common/autoware_boundary_departure_checker/: CMakeLists.txt  README.md  package.xml
common/autoware_boundary_departure_checker/schema/: boundary_departure_checker.schema.json
common/autoware_boundary_departure_checker/src/: uncrossable_boundary_checker.cpp
common/autoware_boundary_departure_checker/test/: test_uncrossable_boundary_checker.cpp
control/autoware_spheric_collision_detector/: CHANGELOG.rst  package.xml
control/autoware_trajectory_follower_node/: CHANGELOG.rst  package.xml
control/autoware_trajectory_follower_node/config/: lichtblick_mpc_lat.json  lichtblick_pid_long.json
control/autoware_trajectory_follower_node/launch/: simple_trajectory_follower.launch.xml
perception/autoware_crosswalk_traffic_light_estimator/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_crosswalk_traffic_light_estimator/launch/: crosswalk_traffic_light_estimator.launch.xml
perception/autoware_crosswalk_traffic_light_estimator/src/: node.cpp  node.hpp
perception/autoware_detected_object_feature_remover/: CHANGELOG.rst  package.xml
perception/autoware_detected_object_feature_remover/design/: DetectedObjectFeatureRemover.node.yaml
perception/autoware_euclidean_cluster/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_euclidean_cluster/config/: label_based_euclidean_cluster.param.yaml  voxel_grid_based_euclidean_cluster.param.yaml
perception/autoware_euclidean_cluster/docs/: label-based-euclidean-cluster.md
perception/autoware_euclidean_cluster/launch/: label_based_euclidean_cluster.launch.py  label_based_euclidean_cluster.launch.xml
perception/autoware_euclidean_cluster/lib/: voxel_grid_based_euclidean_cluster.cpp
perception/autoware_euclidean_cluster/schema/: label_based_euclidean_cluster.schema.json
perception/autoware_euclidean_cluster/src/: label_based_euclidean_cluster_node.cpp  label_based_euclidean_cluster_node.hpp
perception/autoware_ground_segmentation_cuda/: CHANGELOG.rst  package.xml
perception/autoware_image_projection_based_fusion/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_image_projection_based_fusion/config/: roi_cluster_fusion.param.yaml  roi_detected_object_fusion.param.yaml  roi_pointcloud_fusion.param.yaml
perception/autoware_image_projection_based_fusion/launch/: pointpainting_fusion.launch.xml
perception/autoware_image_projection_based_fusion/schema/: roi_cluster_fusion.schema.json  roi_detected_object_fusion.schema.json  roi_pointcloud_fusion.schema.json
perception/autoware_image_projection_based_fusion/src/: fusion_collector.cpp  fusion_matching_strategy.cpp  fusion_node.cpp
perception/autoware_map_based_prediction/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_map_based_prediction/launch/: map_based_prediction.launch.xml
perception/autoware_map_based_prediction/lib/: utils.cpp
perception/autoware_map_based_prediction/src/: map_based_prediction_node.cpp  map_based_prediction_node.hpp
perception/autoware_multi_object_tracker/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_multi_object_tracker/config/: data_association_matrix.param.yaml  input_channels.param.yaml  multi_object_tracker_node.param.yaml
perception/autoware_multi_object_tracker/launch/: multi_object_tracker.launch.xml
perception/autoware_multi_object_tracker/lib/: odometry.cpp  types.cpp
perception/autoware_multi_object_tracker/schema/: data_association_matrix.schema.json  input_channels.schema.json  multi_object_tracker_node.schema.json
perception/autoware_multi_object_tracker/src/: multi_object_tracker_core.cpp  multi_object_tracker_core.hpp  multi_object_tracker_node.cpp  multi_object_tracker_node.hpp
perception/autoware_multi_object_tracker/test/: test_bench.cpp  test_bench.hpp  test_multi_object_tracker.cpp
perception/autoware_object_merger/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_object_merger/config/: data_association_matrix.param.yaml  object_association_merger.param.yaml  object_fusion_merger.param.yaml  overlapped_judge.param.yaml
perception/autoware_object_merger/docs/: object_fusion_merger.md
perception/autoware_object_merger/launch/: object_association_merger.launch.xml  object_fusion_merger.launch.xml
perception/autoware_object_merger/schema/: object_fusion_merger.schema.json
perception/autoware_object_merger/src/: object_association_merger_node.cpp  object_fusion_merger_node.cpp
perception/autoware_ptv3/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_ptv3/config/: ptv3.param.yaml
perception/autoware_tensorrt_yolox/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_traffic_light_arbiter/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_traffic_light_multi_camera_fusion/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_traffic_light_visualization/: CHANGELOG.rst  CMakeLists.txt  package.xml
planning/autoware_path_optimizer/: CHANGELOG.rst  CMakeLists.txt  package.xml
planning/autoware_scenario_selector/: CHANGELOG.rst  CMakeLists.txt  package.xml
planning/autoware_trajectory_concatenator/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
planning/autoware_trajectory_optimizer/: CHANGELOG.rst  CMakeLists.txt  README.md  cspell.json  package.xml  plugins.xml
planning/autoware_trajectory_selector/: CMakeLists.txt  README.md  package.xml
planning/autoware_trajectory_validator/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugins.xml  trajectory_validator.param.yaml
simulator/autoware_carla_interface/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
simulator/autoware_dummy_traffic_light_publisher/: CMakeLists.txt  README.md  package.xml
system/autoware_diagnostic_graph_aggregator/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
(+2353 files in other folders)
