<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_trajectory_follower_node</name>
  <version>0.51.0</version>
  <description>Nodes to follow a trajectory by generating control commands separated into lateral and longitudinal commands</description>

  <maintainer email="maxime.clement@tier4.jp">Maxime CLEMENT</maintainer>
  <maintainer email="alqudah.mohammad@tier4.jp">Alqudah Mohammad</maintainer>
  <maintainer email="zulfaqar.azmi@tier4.jp">Zulfaqar Azmi</maintainer>

  <license>Apache License 2.0</license>

  <author email="takamasa.horibe@tier4.jp">Takamasa Horibe</author>
  <author email="takayuki.murooka@tier4.jp">Takayuki Murooka</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_agnocast_wrapper</depend>
  <depend>autoware_control_msgs</depend>
  <depend>autoware_motion_utils</depend>
  <depend>autoware_mpc_lateral_controller</depend>
  <depend>autoware_pid_longitudinal_controller</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_pure_pursuit</depend>
  <depend>autoware_trajectory_follower_base</depend>
  <depend>autoware_utils</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_fake_test_node</test_depend>
  <test_depend>autoware_lint_common</test_depend>
  <test_depend>autoware_testing</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
