cmake_minimum_required(VERSION 3.14)
project(autoware_euclidean_cluster)

find_package(autoware_cmake REQUIRED)
autoware_package()

find_package(autoware_shape_estimation REQUIRED)
find_package(PCL REQUIRED)
find_package(autoware_agnocast_wrapper REQUIRED)

include_directories(
  include
  SYSTEM
  ${PCL_COMMON_INCLUDE_DIRS}
  ${PCL_INCLUDE_DIRS}
)

ament_auto_add_library(${PROJECT_NAME}_lib SHARED
  lib/euclidean_cluster.cpp
  lib/voxel_grid_based_euclidean_cluster.cpp
  lib/utils.cpp
)

target_link_libraries(${PROJECT_NAME}_lib
  ${PCL_LIBRARIES}
)

target_include_directories(${PROJECT_NAME}_lib
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)

ament_auto_add_library(${PROJECT_NAME}_node_core SHARED
  src/euclidean_cluster_node.cpp
)
target_link_libraries(${PROJECT_NAME}_node_core
  ${PCL_LIBRARIES}
  ${PROJECT_NAME}_lib
)

rclcpp_components_register_node(${PROJECT_NAME}_node_core
  PLUGIN "autoware::euclidean_cluster::EuclideanClusterNode"
  EXECUTABLE euclidean_cluster_node
)

ament_auto_add_library(${PROJECT_NAME}_voxel_grid_node_core SHARED
  src/voxel_grid_based_euclidean_cluster_node.cpp
)
target_link_libraries(${PROJECT_NAME}_voxel_grid_node_core
  ${PCL_LIBRARIES}
  ${PROJECT_NAME}_lib
)
ament_target_dependencies(${PROJECT_NAME}_voxel_grid_node_core
  autoware_agnocast_wrapper
)
autoware_agnocast_wrapper_setup(${PROJECT_NAME}_voxel_grid_node_core)

autoware_agnocast_wrapper_register_node(${PROJECT_NAME}_voxel_grid_node_core
  PLUGIN "autoware::euclidean_cluster::VoxelGridBasedEuclideanClusterNode"
  EXECUTABLE voxel_grid_based_euclidean_cluster_node
  AGNOCAST_EXECUTOR CallbackIsolatedAgnocastExecutor
  ROS2_EXECUTOR SingleThreadedExecutor
)

ament_auto_add_library(${PROJECT_NAME}_label_based_node_core SHARED
  src/label_based_euclidean_cluster_node.cpp
)
target_link_libraries(${PROJECT_NAME}_label_based_node_core
  ${PCL_LIBRARIES}
  ${PROJECT_NAME}_lib
)
ament_target_dependencies(${PROJECT_NAME}_label_based_node_core
  autoware_agnocast_wrapper
  autoware_shape_estimation
)
autoware_agnocast_wrapper_setup(${PROJECT_NAME}_label_based_node_core)

autoware_agnocast_wrapper_register_node(${PROJECT_NAME}_label_based_node_core
  PLUGIN "autoware::euclidean_cluster::LabelBasedEuclideanClusterNode"
  EXECUTABLE label_based_euclidean_cluster_node
  AGNOCAST_EXECUTOR CallbackIsolatedAgnocastExecutor
  ROS2_EXECUTOR SingleThreadedExecutor
)

if(BUILD_TESTING)
  find_package(ament_cmake_gtest REQUIRED)
  ament_auto_add_gtest(test_voxel_grid_based_euclidean_cluster_fusion
    test/test_voxel_grid_based_euclidean_cluster.cpp
  )
endif()

autoware_ament_auto_package(INSTALL_TO_SHARE
    launch
    config
    test
)
